Revision history for Data::Validation

          - Replaced namespace::sweep with autoclean

0.15.1    2014-01-31 23:36:09
          - Added exception classes
          - Removed Ident lines
          - Removed VERSION except in main module
          - Dropped dependency on Class::Load

0.14.1    2013-08-15 16:26:32
          - Switched to Dist::Zilla

0.13.5    2013-08-11 01:12:00
          - Toolchain update. Attempt to filter out residual noise
          - WTF? 099f04b9-6c8d-1014-9814-a1ae5cf4dae8. Updated toolchain
          - Reset min perl testing to original behaviour
          - Raised min Perl ver to v5.10.1

0.12.4    2013-08-02 21:14:20
          - Made Moo::Role last use
            <tobyink> Functions imported into a Moo role *after* the
            `use Moo::Role` become part of the role's API.
          - Fixed resolver tests
          - New method for CPANTesting min Perl ver
          - Added fremen and frogman to tier gruber
          - Aborting Bingoes failed see df276fba-f57c-11e2-8c80-50d7c5c10595
            No choice but to send this smoker to sleep 10 while 1.
            Chris Williams, put my pause id in your stop list
          - Mooified

0.11.1    2013-05-16 22:24:21
          - Converted from SVN to Git

0.10.179  2013-04-17
          - Made constraint attributes readonly
          - Added method name to constraint error messages
          - Added google.com to ValidHostname skip test

0.9.176   2013-02-10
          - Rewrote ValidHostname tests to skip if we can detect a broken
            resolver - part 3

0.9.175   2013-01-26
          - Rewrote ValidHostname tests to skip if we can detect a broken
            resolver - part 2

0.9.174   2013-01-23
          - Rewrote ValidHostname tests to skip if we can detect a broken
            resolver
          - Added OpenDNS incompatability warning to documentation

0.9.172   2012-12-12
          - Fixed test exception expression for SZABGAB

0.9.171   2012-12-06